# learn-agents

./: .gitignore  main.py  setupGitLocally.txt
agents/: researcher.py  writer.py
enterprise-rag/: create_structure.py  project_set_up.txt  pyproject.toml  requirements.txt
enterprise-rag/app/: main.py
enterprise-rag/app/core/: config.py  exceptions.py  logging.py  metrics.py
enterprise-rag/app/rag/: bm25_store.py  embedder.py  extractor.py  hybrid_retriever.py  retriever.py  splitter.py  vector_store.py
enterprise-rag/app/routes/: chat.py  upload.py
enterprise-rag/app/services/retrieval/: bm25_retriever.py  generator.py  hybrid_retriever.py
graph/: workflow.py
mcp_client/: client.py
mcp_servers/: content_server.py  search_server.py
multi-turn-agent/: deffered.txt
multi-turn-agent/backend/: requirements.txt
multi-turn-agent/backend/app/: main.py
multi-turn-agent/backend/app/api/: routes.py
multi-turn-agent/backend/app/chains/: chat_chain.py
multi-turn-agent/backend/app/config/: settings.py
multi-turn-agent/backend/app/graph/: conversation_graph.py
multi-turn-agent/backend/app/memory/: redis_memory.py  summary_memory.py
multi-turn-agent/backend/app/services/: conversation_service.py
multi-turn-agent/frontend/src/: App.jsx  index.css
